[package]
name = "simple_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
tinyset = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.57"
